k8s/manifests/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musp-api
  namespace: musp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: musp-api
  template:
    metadata:
      labels:
        app: musp-api
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: musp-api
          image: gcr.io/my-docker-471807/musp-api:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: google-cloud-key
              mountPath: /root/secret
              readOnly: true
      volumes:
        - name: google-cloud-key
          secret:
            secretName: musp-secret
