k8s/manifests/view-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musp-view
  namespace: musp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: musp-view
  template:
    metadata:
      labels:
        app: musp-view
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: musp-view
          image: gcr.io/my-docker-471807/musp-view:latest
          ports:
            - containerPort: 3000
          # NEXT_PUBLIC_* 変数はビルド時に埋め込まれるため、ランタイムenvは不要
