k8s/manifests/view-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: musp-ingress
  namespace: musp
spec:
  ingressClassName: "cloudflare-tunnel"
  rules:
  - host: musp.aooba.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: musp-view
            port:
              number: 80
